<resources>
    <string name="app_name">期货行情</string>
    <string name="more">更多</string>
    <string name="home_page">首页</string>
    <string name="quotation">行情</string>
    <string name="live_broadcast">直播</string>
    <string name="find">发现</string>
    <string name="mine">我</string>
    <string name="quotation_first_title">股市</string>
    <string name="quotation_second_title">外汇</string>
    <string name="quotation_first_title_key_word">热门品种</string>
    <string name="quotation_second_title_key_word">外汇品种</string>
    <string name="live_broadcast_first_title">财金直播</string>
    <string name="live_broadcast_second_title">外汇直播</string>

</resources>
